--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-jbrowse-react-app",
+  "type": "module",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -11,7 +12,6 @@
     "postdeploy": "aws cloudfront create-invalidation --distribution-id E13LGELJOT4GQO --paths \"/demos/app-vite/*\""
   },
   "dependencies": {
-    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@fontsource/roboto": "^5.0.2",
     "@jbrowse/core": "^2.0.0",
     "@jbrowse/react-app": "^2.0.0",
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^4.2.1",
     "buffer": "^6.0.3",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3",
     "vite": "^5.0.7"
   }
