--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "postdeploy": "aws cloudfront create-invalidation --distribution-id E13LGELJOT4GQO --paths \"/demos/app-vite/*\""
   },
   "dependencies": {
-    "@fontsource/roboto": "^5.0.2",
     "@jbrowse/core": "^2.0.0",
     "@jbrowse/react-app": "^2.0.0",
     "@types/node": "^20.10.4",
+    "jbrowse-plugin-protein3d": "^0.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
