--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-jbrowse-react-app",
+  "name": "jbrowse-protein-env",
   "type": "module",
   "version": "0.0.0",
   "license": "MIT",
@@ -8,14 +8,15 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "aws s3 sync --delete dist s3://jbrowse.org/demos/app-vite/",
-    "postdeploy": "aws cloudfront create-invalidation --distribution-id E13LGELJOT4GQO --paths \"/demos/app-vite/*\""
+    "deploy": "aws s3 sync --delete dist s3://jbrowse.org/demos/protein/",
+    "postdeploy": "aws cloudfront create-invalidation --distribution-id E13LGELJOT4GQO --paths \"/demos/protein/*\""
   },
   "dependencies": {
     "@jbrowse/core": "^2.0.0",
     "@jbrowse/react-app": "^2.0.0",
     "@types/node": "^20.10.4",
     "jbrowse-plugin-protein3d": "^0.0.2",
+    "jbrowse-plugin-msaview": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
